    thinks is best.
  o Default to using Qt's Windows Vista style on Windows Vista. On other
    Windowses or any non-Mac platform, default to the Cleanlooks style if
    we're building with Qt >= 4.3.
  o Add some information to the help browser about the new network settings
    and bridge relay configuration, as well as the new authentication
    settings in 0.0.14.
  o Disable enable-edit-actions, enable-remote-toggle, and
    enable-remote-http-toggle in the bundled Privoxy configuration. Suggested
    by Greg Fleischer.
  o Updated Finnish, French, German, Norwegian, Polish, and Russian
    translations.

0.0.14  26-Aug-2007
  o Add support for Tor's HashedControlPassword and CookieAuthentication
    options. Password authentication is enabled by default.
  o Add support for Tor's new PROTOCOLINFO control command.
  o Support running on Windows NT 4.0 again.
  o Check to see if "%PROGRAMFILES%\Vidalia Bundle\Tor\tor.exe" exists when
    setting the default Tor executable on Win32. If it doesn't, fall back to
    "%PROGRAMFILES%\Tor\tor.exe". (Ticket #262)
  o Allow the people who think clicking 'New Identity' is the solution to
    everything to be disappointed six times per minute, instead of once.
  o Add the ability to configure Tor's data directory.
  o Give users the option of not removing %APPDATA%\Tor and %APPDATA%\Vidalia
    in the Win32 Vidalia and bundle installers.
  o Add a Czech GUI and installer translation from el Mar.
  o Updated Finnish and German translations.


0.0.13  02-Aug-2007
  o Remove the control protocol version checking logic, since Tor will now
    just hang up if the first command received isn't a valid AUTHENTICATE
    command.
  o Fix a bug where Vidalia would display an incorrect error message if the
    user started Vidalia, stopped Tor, ran Tor manually, then clicked 'Start
    Tor'. (Reported by arma)
  o Maintain a list of address mappings, so we can try to replace IP addresses